[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/btree/Editor/pselector/pselector.gd" type="Script" id=1]

[node name="priority_selector" type="GraphNode"]
margin_right = 32.0
margin_bottom = 29.0
hint_tooltip = "behave like selector but each tick it re-evaluate the child condition from the begining"
title = "priority_selector"
show_close = true
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 0, 0.0392157, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 1
slot/0/right_color = Color( 1, 0.890196, 0, 1 )
script = ExtResource( 1 )

[node name="Control" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 133.0
margin_bottom = 44.0
alignment = 2

[node name="Add" type="Button" parent="Control"]
margin_left = 76.0
margin_right = 96.0
margin_bottom = 20.0
text = "+"

[node name="Del" type="Button" parent="Control"]
margin_left = 100.0
margin_right = 117.0
margin_bottom = 20.0
text = "-"
[connection signal="close_request" from="." to="." method="_on_priority_selector_close_request"]
[connection signal="resize_request" from="." to="." method="_on_priority_selector_resize_request"]
[connection signal="pressed" from="Control/Add" to="." method="_on_Add_pressed"]
[connection signal="pressed" from="Control/Del" to="." method="_on_Del_pressed"]
